# libaura

./: CMakeLists.txt
__examples__/hash-functions/: usage.c
__tests__/unit/core/checksum-verification/: CMakeLists.txt  test_hash_bridge.c
__tests__/unit/core/component-container/: CMakeLists.txt  test_registry.c  test_verify.c
cmake/modules/: LibAuraComponent.cmake
docs/architecture/: Requirements.md
docs/theory/: The Hidden Cipher for One Way Function CheckSum Interigity.docx  libaura.html  libaura.md  phantom_decoder.py
include/libaura/core/checksum-verification/: checksum-verfication_bash_bridge.h
include/libaura/core/component-container/: CMakeLists.txt  component-container_config.h  component-container_priv.h  component-container_public.h  component-container_registry.h  component-container_verify.h
include/libaura/core/hash-functions/: hash-functions_config.h  hash-functions_constants.h  hash-functions_public.h  hash-functions_types.h
poc/: HOW_TO_RIFT.md  README.md  cprng.py  cprng_2.py  cprng_3.py  cprng_4.py  cprng_5_gpg_asc.py
src/: CMakeLists.txt
src/core/checksum-verification/: CMakeLists.txt  checksum-verification_hash_bridge.c
src/core/component-container/: component-container_config.c  component-container_priv.c  component-container_public.c  component-container_registry.c  component-container_verify.c
src/core/crypto-auth/: CMakeLists.txt
src/core/hash-functions/: CMakeLists.txt  hash-functions_config.c  hash-functions_priv.c  hash-functions_public.c  hash-functions_verify.c
